# template-example

./: .env  Cargo.toml
migrations/2024-06-04-052823_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/handler/: auth.rs  post.rs
src/helper/: error.rs
src/interface/: auth.rs  mod.rs  post.rs
src/middleware/: auth.rs
src/repository/: auth.rs  post.rs
