[package]
name = "template-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
diesel = { version = "2.1.0", features = ["postgres", "extras"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
once_cell = "1.8"
password-hash = "0.5.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["serde"]}
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.18.1", features = ["derive"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
scrypt = "0.11.0"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
